--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "migrate:up": "yarn prisma migrate save --name init --experimental && prisma migrate up --experimental && yarn prisma:generate",
+    "prisma:generate": "yarn prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^2.10.1",
     "next": "10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@prisma/cli": "^2.10.1",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
