--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@prisma/client": "^2.10.1",
     "next": "10.0.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "ts.data.json": "^1.5.0",
+    "zod": "^2.0.0-beta.17"
   },
   "devDependencies": {
     "@prisma/cli": "^2.10.1",
