--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "e2e": "yarn cypress open",
     "migrate:up": "yarn prisma migrate save --name init --experimental && prisma migrate up --experimental && yarn prisma:generate",
     "prisma:generate": "yarn prisma generate"
   },
@@ -23,6 +24,7 @@
     "@types/react": "^16.9.55",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
+    "cypress": "^5.6.0",
     "eslint": "^7.12.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
