--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "eslint": "^7.12.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "postcss-flexbugs-fixes": "^5.0.1",
+    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^1.9.6",
     "typescript": "^4.0.5"
   }
 }
