--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "@prisma/client": "^2.10.1",
+    "autoprefixer": "^10.0.2",
     "next": "10.0.0",
+    "postcss": "^8.1.8",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "tailwindcss": "^2.0.1",
     "ts.data.json": "^1.5.0",
     "zod": "^2.0.0-beta.17"
   },
@@ -30,7 +33,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss-flexbugs-fixes": "^5.0.1",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^1.9.6",
     "typescript": "^4.0.5"
   }
 }
